examples/test/testpolicy8825.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8825
  namespace: namespace39
spec:
  podSelector:
    matchLabels:
      key12: value38
      key0: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value48
          key13: value43
          key14: value47
      podSelector:
        matchLabels:
          key1: value47
          key22: value34
